Fix: Gallery Page Template layout on mobile with landscape orientation Fix: WooCommerce layout

--- a/style.css
+++ b/style.css
@@ -1872,54 +1872,57 @@ blockquote.right {
   
 /* woo */
 
+body.woocommerce #content {
+  padding: 15px;
+}
 .woocommerce .col2-set .col-1, .woocommerce-page .col2-set .col-1 {
-float: none !important;
-width:100% !important;
-}  
+  float: none !important;
+  width:100% !important;
+}
 
 .woocommerce .col2-set .col-2, .woocommerce-page .col2-set .col-2 {
-float: none !important;
-width:100% !important;
+  float: none !important;
+  width:100% !important;
 }  
 
 .woocommerce form .form-row textarea, .woocommerce-page form .form-row textarea {
-height:100px !important;
+  height:100px !important;
 }
 
 .woocommerce div.product div.images, .woocommerce #content div.product div.images, .woocommerce-page div.product div.images, .woocommerce-page #content div.product div.images {
-float: none !important;
-width:100% !important;
+  float: none !important;
+  width:100% !important;
 }
 
 .thumbnails {
-width:100% !important;
+  width:100% !important;
 }
 
 .woocommerce div.product div.summary, .woocommerce #content div.product div.summary, .woocommerce-page div.product div.summary, .woocommerce-page #content div.product div.summary {
-float: none !important;
-width:100% !important;
+  float: none !important;
+  width:100% !important;
 }
 
 .thumbnails a {
- width:69px !important;   
+  width:69px !important;   
 }
 
 .woocommerce div.product div.images div.thumbnails a, .woocommerce #content div.product div.images div.thumbnails a, .woocommerce-page div.product div.images div.thumbnails a, .woocommerce-page #content div.product div.images div.thumbnails a {
-    width: 69px !important;
+  width: 69px !important;
 }
 
 .woocommerce table.shop_table td, .woocommerce-page table.shop_table td {
-padding: 0px !important;
-font-size:12px !important;
+  padding: 0px !important;
+  font-size:12px !important;
 }
 
 .woocommerce table.shop_table th, .woocommerce-page table.shop_table th {
-padding: 0px !important;
-font-size:12px !important;
+  padding: 0px !important;
+  font-size:12px !important;
 }
 
 .woocommerce table.shop_table, .woocommerce-page table.shop_table{
-margin-left:-6px !important;
+  margin-left:-6px !important;
 }
 
 /* jigoshop */
@@ -1961,6 +1964,13 @@ table.shop_table th{color:#888;font-size:12px;font-weight:700;line-height:18px;p
   }
   #comments{
     clear:both;
+  }
+  .gallery-item, .gallery-item img { 
+    width:100%; 
+    float:none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
   }
 }
 
